--- a/DataAnalysis/MarvelDataExploration.ipynb
+++ b/DataAnalysis/MarvelDataExploration.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "[715 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
     "#merge status shows every record matched between these two dataframes\n",
     "join_characters_charactersToComics.groupby([\"_merge\"]).size()\n",
     "\n",
-    "#one to one relationship"
+    "#all cases join. one to many relationship"
    ]
   },
   {
